# gopper

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: lib.rs  main.rs
tests/: finds_known_good_gadgets.rs
