[package]
name = "gopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.8"
color-eyre = "0.6"
iced-x86 = "1.20.0"
owo-colors = {version = "4", features = ["supports-colors"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "benchmark"
harness = false